--- a/icwe19.bib
+++ b/icwe19.bib
@@ -1,3 +1,80 @@
+@article{Overbey2013,
+	abstract = {With the recent explosion in availability and use of internet social media, contentious politics is currently undergoing a shift in nature. This shift has resulted in technologically savvy groups of people that utilize these new communication resources to quickly disseminate ideas, influence, news, plans, and opinions in near real time to interested, physically disconnected communities of interest. Here, we investigate activity on Twitter during the 2011 protests and revolution in Egypt by performing an analysis of the structure of direct communications and developing a model based on these analyses. We first compare the network representing the declared friends and followers with the underlying direct communication network based on mentions and retweets, performing an evaluation using goodness of model fits, and including the appropriateness of scale-free assumptions. We also examine this underlying network with an analysis of common structural tendencies by employing exponential random graph models. The network structure of locally focused Twitter communities surrounding contentious political networks tend to have a relatively high density, and a propensity for mutual, transitive, and k-star structures, suggesting that both diffusion of information and back-and-forth communication take place frequently in such networks. More global Twitter networks possess properties corroborative of scale-freeness; however, even locally bounded networks show an evidence of preferential attachment. Based on these observations, we introduce a model to automatically ascertain prominent Twitter users within networks centered on contentious politics. We employ a form of the alpha centrality, which can capably take into account directionality and exogenous prominence, and has ties to non-conservative diffusion. Results indicate a model successful at automatically identifying users that are active and prominent within a given community that agrees well with heuristics and is comparable to other similar models. The model also has advantages over others based on its tunability and robustness in the presence of incomplete data.},
+	author = {Overbey, Lucas A and Greco, Benjamin and Paribello, Christopher and Jackson, Terresa},
+	doi = {10.1007/s13278-013-0134-8},
+	issn = {1869-5469},
+	journal = {Social Network Analysis and Mining},
+	month = {dec},
+	number = {4},
+	pages = {1351--1378},
+	title = {{Structure and prominence in Twitter networks centered on contentious politics}},
+	url = {https://doi.org/10.1007/s13278-013-0134-8},
+	volume = {3},
+	year = {2013}
+}
+
+@article{Bonacich2001,
+	abstract = {Eigenvectors of adjacency matrices are useful as measures of centrality or of status. However, they are misapplied to asymmetric networks in which some positions are unchosen. For these networks, an alternative measure of centrality is suggested that equals an eigenvector when eigenvectors can be used and provides meaningfully comparable results when they cannot.},
+	author = {Bonacich, Phillip and Lloyd, Paulette},
+	doi = {10.1016/S0378-8733(01)00038-7},
+	file = {:Users/npm65/Library/Application Support/Mendeley Desktop/Downloaded/Bonacich, Lloyd - 2001 - Eigenvector-like measures of centrality for asymmetric relations(2).pdf:pdf},
+	issn = {0378-8733},
+	journal = {Social Networks},
+	month = {jul},
+	number = {3},
+	pages = {191--201},
+	publisher = {North-Holland},
+	title = {{Eigenvector-like measures of centrality for asymmetric relations}},
+	url = {https://www.sciencedirect.com/science/article/pii/S0378873301000387},
+	volume = {23},
+	year = {2001}
+}
+
+
+@article{Kardara2015,
+	abstract = {Influence theories constitute formal models that identify those individuals that are able to affect and guide their peers through their activity. There is a large body of work on developing such theories, as they have important applications in viral marketing, recommendations, as well as information retrieval. Influence theories are typically evaluated through a manual process that cannot scale to data voluminous enough to draw safe, representative conclusions. To overcome this issue, we introduce in this paper a formalized framework for large-scale, automatic evaluation of topic-specific influence theories that are specialized in Twitter. Basically, it consists of five conjunctive conditions that are indicative of real influence exertion: the first three determine which influence theories are compatible with our framework, while the other two estimate their relative effectiveness. At the core of these two conditions lies a novel metric that assesses the aggregate sentiment of a group of users and allows for estimating how close the behavior of influencers is to that of the entire community. We put our framework into practice using a large-scale test-bed with real data from 75 Twitter communities. In order to select the theories that can be employed in our analysis, we introduce a generic, two-dimensional taxonomy that elucidates their functionality. With its help, we ended up with five established topic-specific theories that are applicable to our settings. The outcomes of our analysis reveal significant differences in their performance. To explain them, we introduce a novel methodology for delving into the internal dynamics of the groups of influencers they define. We use it to analyze the implications of the selected theories and, based on the resulting evidence, we propose a novel partition of influence theories in three major categories with divergent performance.},
+	author = {Kardara, Magdalini and Papadakis, George and Papaoikonomou, Athanasios and Tserpes, Konstantinos and Varvarigou, Theodora},
+	doi = {https://doi.org/10.1016/j.ipm.2014.06.002},
+	file = {:Users/npm65/Documents/myGRID/refs/1-s2.0-S0306457314000491-main.pdf:pdf},
+	issn = {0306-4573},
+	journal = {Information Processing {\&} Management},
+	keywords = {Evaluation framework,Social influence,Topic communities},
+	number = {1},
+	pages = {226--252},
+	title = {{Large-scale evaluation framework for local influence theories in Twitter}},
+	url = {http://www.sciencedirect.com/science/article/pii/S0306457314000491},
+	volume = {51},
+	year = {2015}
+}
+
+@inproceedings{Schenk2011,
+	author = {Schenk, C B and Sicker, D C},
+	booktitle = {2011 IEEE Third International Conference on Privacy, Security, Risk and Trust and 2011 IEEE Third International Conference on Social Computing},
+	doi = {10.1109/PASSAT/SocialCom.2011.100},
+	file = {:Users/npm65/Documents/myGRID/refs/06113156.pdf:pdf},
+	isbn = {VO -},
+	keywords = {Boulder,Canyon fire,Colorado,Conferences,Heuristic algorithms,Media,Security,Twitter,USA Councils,dynamic social networks,event specific influencers,local influence,network dynamics,network structures,ranking algorithm,reputation,social networking (online),social networks,static networks},
+	pages = {501--504},
+	title = {{Finding Event-Specific Influencers in Dynamic Social Networks}},
+	year = {2011}
+}
+
+
+@article{Zhao2011b,
+	abstract = {Twitter as a new form of social media can potentially contain much useful information, but content analysis on Twitter has not been well studied. In particular, it is not clear whether as an information source Twitter can be simply regarded as a faster news feed that covers mostly the same information as traditional news media. In This paper we empirically compare the content of Twitter with a traditional news medium, New York Times, using unsupervised topic modeling. We use a Twitter-LDA model to discover topics from a representative sample of the entire Twitter. We then use text mining techniques to compare these Twitter topics with topics from New York Times, taking into consideration topic categories and types. We also study the relation between the proportions of opinionated tweets and retweets and topic categories and types. Our comparisons show interesting and useful findings for downstream IR or DM applications.},
+	author = {Zhao, Wayne Xin and Jiang, Jing and Weng, Jianshu and He, Jing and Lim, Ee-Peng and Yan, Hongfei and Li, Xiaoming},
+	doi = {10.1007/978-3-642-20161-5\_34},
+	isbn = {978-3-642-20160-8},
+	journal = {33rd European Conference on IR Research, ECIR 2011},
+	keywords = {{\#}dengue,{\#}zika,microblogging,topic modeling,twitter},
+	mendeley-groups = {Twitter,Text Classification},
+	mendeley-tags = {{\#}dengue,{\#}zika},
+	pages = {338--349},
+	title = {{Comparing twitter and traditional media using topic models}},
+	url = {http://dl.acm.org/citation.cfm?id=1996889.1996934},
+	year = {2011}
+}
+
 @inproceedings{Bizid:2015,
 address = {New York, NY, USA},
 author = {Bizid, Imen and Nayef, Nibal and Boursier, Patrice and Faiz, Sami and Morcos, Jacques},
